--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,10 @@
     "**/.vscode",
     "**/.vscode/**"
   ],
-  "C_Cpp_Runner.useAddressSanitizer": false
+  "C_Cpp_Runner.useAddressSanitizer": false,
+  "files.associations": {
+    "string.h": "c",
+    "stdio.h": "c",
+    "ctype.h": "c"
+  }
 }
